--- a/app/assets/stylesheets/select.css
+++ b/app/assets/stylesheets/select.css
@@ -24,7 +24,7 @@
 .Select-control {
   background-color: #fff;
   border-color: #d9d9d9 #ccc #b3b3b3;
-  border-bottom: 1px solid black;
+  border-bottom: 1px solid #d3d3d3;
   color: #333;
   cursor: default;
   display: table;
